fixed image stretching with width of browser

--- a/style.css
+++ b/style.css
@@ -48,5 +48,4 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 50%;
       }
